--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
     </div>
     <nav class="contacto">
       <ul>
-        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="Productos.html">Productos</a></li>
         <li><a href="#">Contacto</a></li>
       </ul>
