--- a/Productos.html
+++ b/Productos.html
@@ -13,7 +13,7 @@
     <img class="logo" src="https://static.vecteezy.com/system/resources/previews/005/720/321/original/smartphone-icon-cell-phone-symbol-free-vector.jpg" alt="Logo de la tienda">
     <nav>
       <ul class="header-contact">
-        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
