--- a/vermas.html
+++ b/vermas.html
@@ -73,6 +73,15 @@
         ]
       });
     });
+
+
+    const images = document.querySelectorAll('.thumbnail-images img');
+
+    images.forEach((img) => {
+        const image = new Image();
+        image.src = img.src;
+    });
+
   </script>
 </body>
 </html>
