--- a/vermas.html
+++ b/vermas.html
@@ -14,7 +14,7 @@
         </div>
         <div class="contacto">
           <ul>
-            <li><a href="inicio.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="Productos.html">Productos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
