Update and rename vermas.html to vermasIphone14.html

--- a/vermasIphone14.html
+++ b/vermasIphone14.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nombre de la marca</title>
-    <link rel="stylesheet" href="vermas.css">
+    <link rel="stylesheet" href="vermasIphone14.css">
 </head>
 <body>
     <header class="header ver-mas">
@@ -14,7 +14,7 @@
         </div>
         <div class="contacto">
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="inicio.html">Inicio</a></li>
             <li><a href="Productos.html">Productos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
@@ -35,9 +35,9 @@
         </div>
       </div>
       <div class="product-info">
-        <h2>Nombre del producto</h2>
-        <h3>Precio: $XXX</h3>
-        <p>Descripción del producto aquí.</p>
+        <h2>IPHONE 14 256GB</h2> 
+        <h3>Precio: $1050</h3> 
+        <p>El Apple iPhone 14 llega este año con el mismo chip A15 Bionic del iPhone 13. Con una pantalla de 6.1 pulgadas, el iPhone 14 cuenta con una cámara dual con dos sensores de 12MP, siendo el principal estabilizado. La cámara selfie es de 12MP y suma PDAF y la batería puede cargarse en forma inalámbrica mediante MagSafe o por cable, logrando una carga de 50% en 30 minutos. El iPhone 14 también cuenta con parlantes stereo, Face ID, sistema de mensajería de emergencia vía satélite, y resiste el polvo y agua..</p>
       </div>
     </div>
   </section>
