--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <div class="frase">
-          <p>Aquí va la frase</p>
+          <p>Encontra los mejores celulares en celphones arg!</p>
         </div>
       </section>
       
